--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,7 @@
 
 html {
   box-sizing: border-box;
-  display: flux;
+  display: flex;
   justify-content: center;
   background-color: var(--main-bg-color);
 }
@@ -19,10 +19,10 @@ html {
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue;
-  font-size: 14pt;
+  font-size: 13pt;
   height: 100vh;
   width: 100%;
-  max-width: 100em;
+  max-width: 50em;
 }
 
 h1 {
@@ -34,4 +34,9 @@ h1 {
 h2 {
   color: var(--secondary-headline-color);
   font-size: 1.5em;
+}
+
+figure > img {
+  max-width: 100%;
+  height: auto;
 }
