Improve error handling

--- a/views/error.pug
+++ b/views/error.pug
@@ -1,7 +1,7 @@
 extends layout
 block content
   h1 🙀 Ooops
-  h2 Looks like you tried an unsupported news provider
+  h2 Looks like you tried an unsupported news provider.
   p Try any of the following news providers instead:
   ul
     each provider in providers
