--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,10 @@ doctype html
 html
   include includes/head.pug
   body
+    if publisher
+      header
+        h1
+          img(src=publisher.logo.url, width=publisher.logo.width, height=publisher.logo.height, alt=publisher.name)
     main
       block content
     block footer
