Lazy-loading responsive images

--- a/views/error.pug
+++ b/views/error.pug
@@ -6,4 +6,8 @@ block content
   ul
     each provider in providers
       li
-        a(href=`./${provider}`)= `📰 ${provider}`
+        | 📰
+        |
+        a(href=`./${provider}`)= `${provider}`
+  if error
+    pre= error
