--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -3,3 +3,4 @@ head
   meta(name='viewport', content='width=device-width,minimum-scale=1,initial-scale=1')
   title 📰 News Progressive Web App
   link(rel='stylesheet', href='./css/main.css')
+  script(type='module', src='./js/lazyload.mjs', defer)
