--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html
     if publisher
       header
         h1
-          img(src=publisher.logo.url, width=publisher.logo.width, height=publisher.logo.height, alt=publisher.name)
+          img(src=publisher.logo.url, width=publisher.logo.width, height=publisher.logo.height, alt=publisher.name, decoding='async')
     main
       block content
     block footer
