--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -3,5 +3,5 @@ head
   meta(name='viewport', content='width=device-width,minimum-scale=1,initial-scale=1')
   title 📰 News Progressive Web App
   link(rel='stylesheet', href='./css/main.css')
-  script(nomodule, src='./js/polyfills.js', defer)
+  script(nomodule, src='./js/polyfills.js')
   script(type='module', src='./js/lazyload.mjs', defer)
