--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,20 @@
 :root {
   --main-bg-color: white;
   --main-headline-color: black;
-  --secondary-headline-color: darkgray;
+  --secondary-headline-color: #828282;
+  --figcaption-color: white;
+  --figcaption-bg-color: rgba(0, 0, 0, .8);
+  --link-color: red;
+  --primary-heading-font: 'Amstelvar-Roman-VF';
+  --secondary-heading-font: 'Amstelvar-Roman-VF';
+  --body-font-size: 12pt;
+  --body-min-width: 240px;
+  --body-max-width: 1000px;
+}
+
+@font-face {
+  font-family: 'Amstelvar-Roman-VF';
+  src: url('../fonts/Amstelvar-Roman-VF.ttf');
 }
 
 html {
@@ -9,6 +22,10 @@ html {
   display: flex;
   justify-content: center;
   background-color: var(--main-bg-color);
+}
+
+html {
+  font-size: calc(var(--body-font-size) + .1vw);
 }
 
 *,
@@ -19,28 +36,82 @@ html {
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue;
-  font-size: 12pt;
   height: 100vh;
   width: 100%;
-  min-width: 240px;
-  max-width: 50em;
+  min-width: var(--body-min-width);
+  max-width: var(--body-max-width);
+  margin: 0 .25rem;
 }
 
 body > header {
   background-color: var(--main-headline-color);
+  padding: 0 .25rem;
+}
+
+article {
+  margin-bottom: 2.5rem;
 }
 
 h1 {
+  font-family: var(--primary-heading-font), system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue;
+  font-variation-settings: 'opsz' 144;
   color: var(--main-headline-color);
-  font-size: 1.5em;
+  width: 100%;
+  border-bottom: solid .2rem var(--main-headline-color);
+  font-size: 2rem;
+  margin: .5rem 0;
 }
 
 h2 {
+  font-family: var(--secondary-heading-font), system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue;
+  font-variation-settings: 'opsz' 77;
   color: var(--secondary-headline-color);
-  font-size: 1.25em;
+  width: 100%;
+  border-bottom: solid .1rem var(--secondary-headline-color);
+  font-size: 1.5rem;
+  margin: .5rem 0;
+}
+
+a {
+  color: var(--link-color);
+  text-decoration: none;
+}
+
+.icon {
+  height: 1.25rem;
+  width: auto;
+  margin: 0 .5rem;
+}
+
+.metadata {
+  font-size: .75rem;
+}
+
+summary::-webkit-details-marker {
+  display: none;
+}
+
+summary {
+  font-weight: bold;
+  cursor: pointer;
+}
+
+figure {
+  margin: .25rem 0 -1.5rem 0;
 }
 
 figure img {
-  max-width: 100%;
+  width: 100%;
   height: auto;
+}
+
+figcaption {
+  position: relative;
+  top: -2rem;
+  font-size: .75rem
+  width: 100%;
+  padding: .25rem;
+  text-align: center;
+  background-color: var(--figcaption-bg-color);
+  color: var(--figcaption-color);
 }
