--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -3,5 +3,9 @@ head
   meta(name='viewport', content='width=device-width,minimum-scale=1,initial-scale=1')
   title 📰 News Progressive Web App
   link(rel='stylesheet', href='./css/main.css')
-  script(src='./js/polyfills.js')
+  link(rel='preload', href='./fonts/Amstelvar-Roman-VF.ttf', as='font', crossorigin)
+  script.
+    if (!('IntersectionObserver' in window)) {
+      document.write('<script src="https://unpkg.com/intersection-observer@0.5.0/intersection-observer.js"><\/script>');
+    }
   script(type='module', src='./js/lazyload.mjs', defer)
