--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,12 +1,16 @@
 :root {
+  --overscroll-bg-color: black;
   --main-bg-color: white;
+  --main-color: #263238;
   --main-headline-color: black;
   --secondary-headline-color: #828282;
+  --tertiary-headline-color: rgb(0, 90, 177);
   --figcaption-color: white;
-  --figcaption-bg-color: rgba(0, 0, 0, .8);
+  --figcaption-bg-color: rgba(0, 0, 0, 0.75);
   --link-color: red;
   --primary-heading-font: 'Amstelvar-Roman-VF';
   --secondary-heading-font: 'Amstelvar-Roman-VF';
+  --tertiary-heading-font: 'Amstelvar-Roman-VF';
   --body-font-size: 12pt;
   --body-min-width: 240px;
   --body-max-width: 1000px;
@@ -18,14 +22,13 @@
 }
 
 html {
+  background-color: var(--overscroll-bg-color);
   box-sizing: border-box;
   display: flex;
   justify-content: center;
-  background-color: var(--main-bg-color);
-}
-
-html {
-  font-size: calc(var(--body-font-size) + .1vw);
+  font-size: calc(var(--body-font-size) + 0.1vw);
+  margin: 0;
+  padding: 0;
 }
 
 *,
@@ -36,16 +39,17 @@ html {
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue;
-  height: 100vh;
-  width: 100%;
+  background-color: var(--main-bg-color);
+  color: var(--main-color);
   min-width: var(--body-min-width);
   max-width: var(--body-max-width);
-  margin: 0 .25rem;
+  margin: 0;
+  padding: 0 0.25rem;
 }
 
 body > header {
   background-color: var(--main-headline-color);
-  padding: 0 .25rem;
+  padding: 0 0.25rem;
 }
 
 article {
@@ -56,20 +60,32 @@ h1 {
   font-family: var(--primary-heading-font), system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue;
   font-variation-settings: 'opsz' 144;
   color: var(--main-headline-color);
+  cursor: pointer;
   width: 100%;
-  border-bottom: solid .2rem var(--main-headline-color);
+  border-bottom: solid 0.2rem var(--main-headline-color);
   font-size: 2rem;
-  margin: .5rem 0;
+  margin: 0.5rem 0;
 }
 
 h2 {
   font-family: var(--secondary-heading-font), system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue;
   font-variation-settings: 'opsz' 77;
   color: var(--secondary-headline-color);
+  cursor: pointer;
   width: 100%;
-  border-bottom: solid .1rem var(--secondary-headline-color);
+  border-bottom: solid 0.1rem var(--secondary-headline-color);
   font-size: 1.5rem;
-  margin: .5rem 0;
+  margin: 0.5rem 0;
+}
+
+h3 {
+  font-family: var(--tertiary-heading-font), system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue;
+  font-variation-settings: 'opsz' 77;
+  color: var(--tertiary-headline-color);
+  width: 100%;
+  border-bottom: solid 0.1rem var(--tertiary-headline-color);
+  font-size: 1.25rem;
+  margin: 0.5rem 0;
 }
 
 a {
@@ -80,37 +96,63 @@ a {
 .icon {
   height: 1.25rem;
   width: auto;
-  margin: 0 .5rem;
+  margin: 0 0.5rem;
 }
 
 .metadata {
-  font-size: .75rem;
+  font-size: 0.75rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.metadata span {
+  white-space: pre;
+}
+
+summary {
+  cursor: pointer;
+}
+
+summary::after {
+  content: url('../img/readmore.svg');
+  position: absolute;
+  right: 0.25rem;
+  margin-top: -1.5rem;
 }
 
 summary::-webkit-details-marker {
   display: none;
 }
 
-summary {
-  font-weight: bold;
-  cursor: pointer;
+details[open] > summary {
+  color: transparent;
+  position: absolute;
+}
+
+details[open] > summary::after {
+  content: '';
 }
 
 figure {
-  margin: .25rem 0 -1.5rem 0;
+  margin: 0.25rem 0;
+  position: relative;
+  cursor: pointer;
 }
 
 figure img {
+  display: block;
   width: 100%;
   height: auto;
+  outline: solid 1px var(--secondary-headline-color);
 }
 
 figcaption {
-  position: relative;
-  top: -2rem;
-  font-size: .75rem
-  width: 100%;
-  padding: .25rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  font-size: 0.8rem;
+  padding: 0.5rem;
   text-align: center;
   background-color: var(--figcaption-bg-color);
   color: var(--figcaption-color);
