--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -9,3 +9,4 @@ head
       document.write('<script src="https://unpkg.com/intersection-observer@0.5.0/intersection-observer.js"><\/script>');
     }
   script(type='module', src='./js/lazyload.mjs', defer)
+  script(type='module', src='./js/main.mjs', defer)
