Small style improvements

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -53,7 +53,7 @@ body > header {
 }
 
 article {
-  margin-bottom: 2.5rem;
+  margin-bottom: 2.75rem;
 }
 
 h1 {
@@ -97,6 +97,7 @@ a {
   height: 1.25rem;
   width: auto;
   margin: 0 0.5rem;
+  vertical-align: middle;
 }
 
 .metadata {
@@ -111,13 +112,19 @@ a {
 
 summary {
   cursor: pointer;
+  outline: none;
 }
 
 summary::after {
+  background-color: white;
   content: url('../img/readmore.svg');
   position: absolute;
   right: 0.25rem;
-  margin-top: -1.5rem;
+  margin-top: -1rem;
+}
+
+summary:focus::after {
+  outline: solid 2px orange;
 }
 
 summary::-webkit-details-marker {
