Better styling for Firefox

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,6 +42,7 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue;
   background-color: var(--main-bg-color);
   color: var(--main-color);
+  min-height: 100vh;
   min-width: var(--body-min-width);
   max-width: var(--body-max-width);
   margin: 0;
@@ -117,6 +118,11 @@ summary {
   cursor: pointer;
   outline: none;
   position: relative;
+  list-style: none;
+}
+
+summary::-webkit-details-marker {
+  display: none;
 }
 
 summary::after {
@@ -129,10 +135,6 @@ summary::after {
 
 summary:focus::after {
   outline: solid 2px orange;
-}
-
-summary::-webkit-details-marker {
-  display: none;
 }
 
 details[open] > summary {
