--- a/views/index.pug
+++ b/views/index.pug
@@ -12,7 +12,7 @@ block content
               | #{article.dateline}
           span
             img.icon(src='./img/calendar.svg', alt='')
-            time(datetime=article.datePublished)= `${new Intl.DateTimeFormat(`${locale}`, {year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit'}).format(new Date(article.datePublished))}`
+            time(datetime=article.datePublished)= `${new Intl.DateTimeFormat(`${locale}`, {year: 'numeric', month: 'short', day: 'numeric', hour: '2-digit', minute: '2-digit'}).format(new Date(article.datePublished))}`
           if article.author
             span
               img.icon(src='./img/author.svg', alt='')
