--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: 'Amstelvar-Roman-VF';
-  src: url('../fonts/Amstelvar-Roman-VF.ttf');
+  src: url('../fonts/Amstelvar-Roman-VF.woff2');
   font-display: swap;
 }
 
