--- a/views/index.pug
+++ b/views/index.pug
@@ -24,7 +24,7 @@ block content
               - const aspectRatio = image.width / image.height;
               source(srcset='./img/placeholder.svg', data-srcset=image.url, data-aspect-ratio=aspectRatio, media=`(min-width: ${image.width}px)`)
             - const smallestImage = article.image.sort((a, b) => a.width - b.width)[0]
-            img(src='./img/placeholder.svg', data-src=smallestImage.url, style=`height:calc(100%/(${smallestImage.width/smallestImage.height}))`, alt=smallestImage.caption, decoding='async')
+            img(src='./img/placeholder.svg', data-src=smallestImage.url, style=`height:calc(100vw/(${smallestImage.width/smallestImage.height}))`, alt=smallestImage.caption, decoding='async')
           figcaption= article.image[0].caption
         details
           summary!= article.description
