--- a/views/index.pug
+++ b/views/index.pug
@@ -32,3 +32,13 @@ block content
         details
           summary!= article.description
           section!= article.articleBody
+          if article.associatedMedia
+            each associatedMedium in article.associatedMedia
+              figure(lazyload)
+                picture
+                  each image in associatedMedium.sort((a, b) => b.width - a.width)
+                    - const aspectRatio = image.width / image.height;
+                    source(srcset='./img/placeholder.svg', data-srcset=image.url, data-aspect-ratio=aspectRatio, media=`(min-width: ${image.width}px)`)
+                  - const smallestImage = associatedMedium.sort((a, b) => a.width - b.width)[0]
+                  img(src='./img/placeholder.svg', data-src=smallestImage.url, style=`height:calc(var(--main-current-width)/(${smallestImage.width/smallestImage.height}))`, alt=smallestImage.caption, decoding='async')
+                figcaption= article.image[0].caption
