--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,7 @@ html(lang=locale)
         header
           a(href=`./${home}`)
             h1
-              img(src=publisher.logo.url, width=publisher.logo.width, height=publisher.logo.height, alt=publisher.name, decoding='async')
+              img(src=publisher.logo.url, style=`max-width:${publisher.logo.width}px; max-height:${publisher.logo.height}px; height:calc(var(--main-current-width)/(${publisher.logo.width/publisher.logo.height}))`, alt=publisher.name, decoding='async')
     main
       block content
     block footer
