--- a/public/css/main.css
+++ b/public/css/main.css
@@ -57,7 +57,6 @@ body > header {
 
 header img {
   max-width: 100%;
-  height: auto;
 }
 
 article {
@@ -92,20 +91,20 @@ h3 {
   color: var(--tertiary-headline-color);
   width: 100%;
   border-bottom: solid 0.1rem var(--tertiary-headline-color);
-  font-size: 1rem;
+  font-size: 1.1rem;
   margin: 0.5rem 0;
 }
 
 a {
   color: var(--main-color);
-  text-decoration: underline;
-  text-decoration-skip-ink: auto;
-  text-decoration-color: var(--link-color);
+  text-decoration: none;
+  border-bottom: solid var(--link-color) .1rem;
+  margin-bottom: -.05rem;
 }
 
 .icon {
   height: 1.25rem;
-  width: auto;
+  width: 1.25rem;
   margin: 0 0.5rem;
   vertical-align: middle;
 }
@@ -114,6 +113,8 @@ a {
   font-size: 0.75rem;
   display: flex;
   flex-wrap: wrap;
+  padding: 0.25rem 0;
+  border-bottom: solid 0.1rem var(--secondary-headline-color);
 }
 
 .metadata span {
@@ -136,11 +137,12 @@ summary::after {
   content: url('../img/readmore.svg');
   position: absolute;
   right: 0.25rem;
-  margin-top: -1.1rem;
+  margin-top: -0.5rem;
 }
 
 summary:focus::after {
-  outline: solid 2px orange;
+  outline: solid 0.25rem orange;
+  outline: -webkit-focus-ring-color auto 5px;
 }
 
 details[open] > summary {
