Add /article route

--- a/views/error.pug
+++ b/views/error.pug
@@ -8,6 +8,6 @@ block content
       li
         | 📰
         |
-        a(href=`./${provider}`)= `${provider}`
+        a(href=`/${provider}`)= `${provider}`
   if error
     pre= error
