--- a/public/css/main.css
+++ b/public/css/main.css
@@ -65,7 +65,7 @@ header img {
 }
 
 a > h1 {
-  border: none;
+  text-decoration: none;
 }
 
 article {
@@ -73,7 +73,7 @@ article {
 }
 
 h1 {
-  font-family: var(--primary-heading-font), system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue;
+  font-family: var(--primary-heading-font), Georgia, serif;
   font-variation-settings: 'opsz' 144;
   color: var(--main-headline-color);
   cursor: pointer;
@@ -84,7 +84,7 @@ h1 {
 }
 
 h2 {
-  font-family: var(--secondary-heading-font), system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue;
+  font-family: var(--secondary-heading-font), Georgia, serif;
   font-variation-settings: 'opsz' 77;
   color: var(--secondary-headline-color);
   cursor: pointer;
@@ -106,9 +106,8 @@ h3 {
 
 a {
   color: var(--main-color);
-  text-decoration: none;
-  border-bottom: solid var(--link-color) 0.1rem;
-  margin-bottom: -0.05rem;
+  text-decoration: underline;
+  text-decoration-color: var(--link-color);
 }
 
 .icon {
