Add Apple icons

--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -8,6 +8,8 @@ head
   link(rel='preload', href='/js/main.mjs', as='script', crossorigin)
   link(rel='preload', href='/img/placeholder.svg', as='image')
   link(rel='manifest', href='/manifest.webmanifest')
+  link(rel='apple-touch-icon' sizes="120x120" href='/icons/newspaper120x120.png')
+  link(rel='apple-touch-icon' sizes="144x144" href='/icons/newspaper144x144.png')
   script.
     if (!('IntersectionObserver' in window)) {
       document.write('<script src="https://unpkg.com/intersection-observer@0.5.0/intersection-observer.js"><\/script>');
