--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -1,6 +1,7 @@
 head
   meta(charset='utf-8')
   meta(name='viewport', content='width=device-width,minimum-scale=1,initial-scale=1')
+  meta(http-equiv='Content-Security-Policy' content='upgrade-insecure-requests')
   title 📰 News Progressive Web App
   link(rel='stylesheet', href='/css/main.css')
   link(rel='preload', href='/fonts/Amstelvar-Roman-VF.woff2', as='font', crossorigin)
