--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,15 +10,12 @@
   --figcaption-bg-color: rgba(0, 0, 0, 0.75);
   --link-color: red;
   --blockquote-bg-color: #eee;
-
   --primary-heading-font: 'Amstelvar-Roman-VF';
   --secondary-heading-font: 'Amstelvar-Roman-VF';
   --tertiary-heading-font: 'Amstelvar-Roman-VF';
-
   --body-font-size: 12pt;
   --body-min-width: 240px;
   --body-max-width: 1000px;
-
   --main-current-width: var(--body-max-width);
 }
 
@@ -64,10 +61,6 @@ header img {
   max-width: 100%;
 }
 
-a > h1 {
-  text-decoration: none;
-}
-
 article {
   margin-bottom: 2.75rem;
 }
@@ -83,6 +76,11 @@ h1 {
   margin: 0.5rem 0;
 }
 
+a > h1 {
+  text-decoration: none;
+  border: none;
+}
+
 h2 {
   font-family: var(--secondary-heading-font), Georgia, serif;
   font-variation-settings: 'opsz' 77;
@@ -95,11 +93,10 @@ h2 {
 }
 
 h3 {
-  font-family: var(--tertiary-heading-font), system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue;
+  font-family: var(--tertiary-heading-font), Georgia, serif;
   font-variation-settings: 'opsz' 77;
   color: var(--tertiary-headline-color);
   width: 100%;
-  border-bottom: solid 0.1rem var(--tertiary-headline-color);
   font-size: 1.1rem;
   margin: 0.5rem 0;
 }
