Mark external links, make internal links work

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -107,6 +107,10 @@ a {
   text-decoration-color: var(--link-color);
 }
 
+a[href^="http"]::after {
+  content: url('../img/externallink.svg');
+}
+
 @supports (text-decoration-color: red) {
   a {
     text-decoration: underline;
